tekton/eventlisteners/exposing-eventlisteners-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
        - path: /el/reviews/topic
          pathType: Prefix
          backend:
            service:
              name: el-build-deploy-reviews-listener
              port:
                number: 8080
